--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "bun build --compile --minify-whitespace --minify-syntax --target bun-linux-x64 --outfile server src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/jwt": "^1.4.0",
     "elysia": "latest"
   },
   "devDependencies": {
